Дебаг и доработка
Небольшое исправление к предыдущему коммиту